--- a/.github/workflows/send_discord.yml
+++ b/.github/workflows/send_discord.yml
@@ -1,4 +1,4 @@
-name: Send Discord Cashback Digest
+name: Send Discord
 on:
   schedule:
     - cron: "0 7 * * 1"    # 07:00 UTC = 09:00 Berlin Mondays
