--- a/.github/workflows/send_telegram.yml
+++ b/.github/workflows/send_telegram.yml
@@ -1,4 +1,4 @@
-name: Send Telegram Cashback Digest
+name: Send Telegram
 on:
   schedule:
     - cron: "0 7 * * 1"   # 07:00 UTC = 09:00 Europe/Berlin Mondays
